# stacchip

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  README.md  index.html  index.md  pyproject.toml  sitemap.xml
.github/workflows/: deploy_mkdocs.yml  release.yml  tests.yml
api/stacchip/chipper/: chipper.md  index.html
api/stacchip/indexer/: index.html  indexer.md
chipper/: index.html
docs/: mkdocs.yml
docs/src/: chipper.md  index.md  indexer.md  motivation.md  naip-tutorial.md  processors.md
indexer/: index.html  indexer.md
naip-tutorial/: index.html
processors/: index.html  processors.md
scripts/: sentinel-2-processor.py
search/: search_index.json
stacchip/: __init__.py  chipper.py  chipping.py  const.py  indexer.py  merger.py  utils.py
stacchip/processors/: landsat_processor.py  linz_processor.py  modis_processor.py  naip_processor.py  prechip.py  sentinel-2-processor.py  sentinel_1_processor.py  sentinel_2_processor.py  stats.py
tests/: test_chipper.py  test_indexer.py
tests/data/: landsat-c2l2-sr-LC09_L2SR_086107_20240311_20240312_02_T2_SR.json  naip_m_4207009_ne_19_060_20211024.json  sentinel-2-l2a-S2A_T20HNJ_20240311T140636_L2A.json  stacchip_test_item.json
