[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stacchip"
authors = [
  { name="Daniel Wiesmann", email="danielwiesmann@developmentseed.org" },
]
description = "Dynamically create image chips from STAC items"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pystac",
    "pystac-client",
    "pyarrow",
    "geoarrow-pyarrow",
    "rasterio",
    "numpy",
    "boto3",
    "geopandas",
]
dynamic = [
 "version",
]

[project.urls]
"Homepage" = "https://github.com/Clay-foundation/stacchip"
"Bug Tracker" = "https://github.com/Clay-foundation/stacchip/issues"

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "mock",
    "build",
]

[project.scripts]
stacchip-sentinel-2 = "stacchip.processors.sentinel_2_processor:process"

[tool.hatch.version]
path = "stacchip/__init__.py"